--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -7,8 +7,10 @@
         <div class="form-group row">
             <label class="col-2 col-form-label">Nombre</label>
             <div class="col-8">
-
-                <input class="form-control" type="text" placeholder="Nombre">
+                <input class="form-control" type="text" placeholder="Nombre" formControlName="nombre" [class.is-invalid]="nombreNoValido">
+                <small *ngIf="nombreNoValido" class="text-danger">
+                    Ingrese 5 letras
+                </small>
             </div>
         </div>
 
@@ -16,7 +18,10 @@
             <label class="col-2 col-form-label">Apellido</label>
             <div class="col-8">
 
-                <input class="form-control" type="text" placeholder="Apellido">
+                <input class="form-control" type="text" placeholder="Apellido" formControlName="apellido" [class.is-invalid]="nombreNoValido">
+                <small *ngIf="nombreNoValido" class="text-danger">
+                    Ingrese 5 letras
+                </small>
             </div>
         </div>
 
@@ -26,7 +31,10 @@
         <label class="col-2 col-form-label">Correo</label>
         <div class="col-8">
 
-            <input class="form-control" type="email" placeholder="Correo electrónico">
+            <input class="form-control" type="email" placeholder="Correo electrónico" formControlName="correo" [class.is-invalid]="nombreNoValido">
+            <small *ngIf="nombreNoValido" class="text-danger">
+                Ingrese 5 letras
+            </small>
         </div>
     </div>
 
@@ -42,3 +50,19 @@
     </div>
 
 </form>
+
+
+
+<hr>
+
+<pre>
+    Estado del formylario : {{forma.valid}}
+    <br>
+    Status: {{forma.valid}}
+    <br>
+    Touch: {{forma.touched}}
+</pre>
+
+<pre>
+    {{ forma.value | json }}
+</pre>
