Grupo de Formularios

--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -6,7 +6,7 @@
 
         <div class="form-group row">
             <label class="col-2 col-form-label">Nombre</label>
-            <div class="col-8">
+            <div class="col">
                 <input class="form-control" type="text" placeholder="Nombre" formControlName="nombre" [class.is-invalid]="nombreNoValido">
                 <small *ngIf="nombreNoValido" class="text-danger">
                     Ingrese 5 letras
@@ -16,10 +16,10 @@
 
         <div class="form-group row">
             <label class="col-2 col-form-label">Apellido</label>
-            <div class="col-8">
+            <div class="col">
 
-                <input class="form-control" type="text" placeholder="Apellido" formControlName="apellido" [class.is-invalid]="nombreNoValido">
-                <small *ngIf="nombreNoValido" class="text-danger">
+                <input class="form-control" type="text" placeholder="Apellido" formControlName="apellido" [class.is-invalid]="apellidoNoValido" >
+                <small *ngIf="apellidoNoValido" class="text-danger">
                     Ingrese 5 letras
                 </small>
             </div>
@@ -29,12 +29,23 @@
 
     <div class="form-group row">
         <label class="col-2 col-form-label">Correo</label>
-        <div class="col-8">
+        <div class="col">
 
-            <input class="form-control" type="email" placeholder="Correo electrónico" formControlName="correo" [class.is-invalid]="nombreNoValido">
-            <small *ngIf="nombreNoValido" class="text-danger">
+            <input class="form-control" type="email" placeholder="Correo electrónico" formControlName="correo" [class.is-invalid]="correoNoValido">
+            <small *ngIf="correoNoValido" class="text-danger">
                 Ingrese 5 letras
             </small>
+        </div>
+    </div>
+
+    <div class="form-group row" formGroupName="direcion">
+        <label class="col-2 col-form-label">Distrito</label>
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Correo electrónico" formControlName="distrito">
+        </div>
+        <label class="col-2 col-form-label">Departamento</label>
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Correo electrónico" formControlName="departamento">
         </div>
     </div>
 
